# OOP_lab3

./: CMakeLists.txt  Converter.cpp  Converter.h  Mixer.cpp  Mixer.h  Multiplier.cpp  Multiplier.h  Muter.cpp  Muter.h  Parser.cpp  Parser.h  RingBuffer.cpp  RingBuffer.h  SoundConverter.cpp  SoundConverter.h  Types.h  WavHeader.h  WavSink.cpp  WavSink.h  WavSource.cpp  WavSource.h  config1.txt  config3.txt  main.cpp  test.cpp
